--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gridfs-stream": "^1.1.1",
     "hbs": "~4.0.1",
     "jwks-rsa": "^1.2.1",
+    "mongoose": "^4.13.5",
     "morgan": "~1.8.1",
     "multer": "^1.3.0",
     "multer-gridfs-storage": "^2.1.0",
