--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,6 +12,7 @@
     "prop-types": "^15.6.0",
     "react": "16.0.0-beta.5",
     "react-native": "https://github.com/expo/react-native/archive/sdk-22.0.2.tar.gz",
+    "react-native-easy-toast": "^1.0.9",
     "react-native-form-generator": "^0.9.9",
     "react-navigation": "^1.0.0-beta.19",
     "tcomb-form-native": "^0.6.11"
