--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "multer": "^1.3.0",
     "multer-gridfs-storage": "^2.1.0",
     "node-fetch": "^1.7.3",
+    "react-native-elements": "^0.18.4",
     "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
